--- a/curator.ini
+++ b/curator.ini
@@ -9,3 +9,15 @@ chmod-socket = 600
 vacuum = true
 
 die-on-term = true
+
+uwsgi-log-directory = /var/log/uwsgi
+logto = %(uwsgi-log-directory)/uwsgi.log
+
+# Destination for rotated log
+log-backupname = %(uwsgi-log-directory)/uwsgi.log.rotated
+
+log-master = true
+log-reopen = true
+
+# Cron to trigger log rotation each hour
+cron2 = hour=-1,minute=0,unique=1 echo L > %(master-fifo) && sleep 5 && mv %(log-backupname) %(logto).$(/bin/date -u -d '-1 hour' +%%Y-%%m-%%d-%%H)
