Logging file rotation bug fix

--- a/curator.ini
+++ b/curator.ini
@@ -11,6 +11,7 @@ vacuum = true
 die-on-term = true
 
 uwsgi-log-directory = /var/log/uwsgi
+master-fifo = %(uwsgi-directory)/uwsgi.fifo
 logto = %(uwsgi-log-directory)/uwsgi.log
 
 # Destination for rotated log
