Bug fixes, cleanup, and better NPAtlas tracking

--- a/curator.ini
+++ b/curator.ini
@@ -8,10 +8,11 @@ socket = curator.sock
 chmod-socket = 600
 vacuum = true
 
+buffer-size = 65535
 die-on-term = true
 
 uwsgi-log-directory = /var/log/uwsgi
-master-fifo = %(uwsgi-directory)/uwsgi.fifo
+master-fifo = %(uwsgi-log-directory)/uwsgi.fifo
 logto = %(uwsgi-log-directory)/uwsgi.log
 
 # Destination for rotated log
