--- a/curator.ini
+++ b/curator.ini
@@ -1,25 +1,15 @@
 [uwsgi]
-module = wsgi
+wsgi-file = run.py
+callable = app
+uid = uwsgi
 
 master = true
 processes = 4
 
-socket = curator.sock
-chmod-socket = 600
-vacuum = true
+socket = 0.0.0.0:5000
+socket-timeout = 300
+http-timeout = 300
+harakiri = 300
 
 buffer-size = 65535
 die-on-term = true
-
-uwsgi-log-directory = /var/log/uwsgi
-master-fifo = %(uwsgi-log-directory)/uwsgi.fifo
-logto = %(uwsgi-log-directory)/uwsgi.log
-
-# Destination for rotated log
-log-backupname = %(uwsgi-log-directory)/uwsgi.log.rotated
-
-log-master = true
-log-reopen = true
-
-# Cron to trigger log rotation each hour
-cron2 = hour=-1,minute=0,unique=1 echo L > %(master-fifo) && sleep 5 && mv %(log-backupname) %(logto).$(/bin/date -u -d '-1 hour' +%%Y-%%m-%%d-%%H)
