--- a/Dockerfile.celery
+++ b/Dockerfile.celery
@@ -28,8 +28,8 @@ RUN conda create -n curator -c rdkit rdkit
 RUN /bin/bash -c "source activate curator && pip install -r requirements.txt"
 
 ENV FLASK_APP "run.py"
-ENV FLASK_CONFIG=development
-ENV FLASK_ENV=development
+ENV FLASK_CONFIG=production
+ENV FLASK_ENV=production
 EXPOSE 5000
 
 RUN apt-get update && apt-get install -y libxrender-dev mysql-client
