--- a/my-nginx-container/app.conf
+++ b/my-nginx-container/app.conf
@@ -1,6 +1,8 @@
 server {
     listen 443 ssl;
     server_name <SERVER_NAME>;
+
+    ssl_protocols TLSv1.2;
     ssl_certificate /etc/letsencrypt/live/npatlas-curate.chem.sfu.ca/fullchain.pem; # managed by Certbot
     ssl_certificate_key /etc/letsencrypt/live/npatlas-curate.chem.sfu.ca/privkey.pem; # managed by Certbot
     root /usr/share/nginx/html;
